--- a/index.html
+++ b/index.html
@@ -190,13 +190,13 @@
       <div class="blur-box">
         <h4 style="color: white; margin-bottom: 20px">ESCOLHA UMA SEÇÃO</h4>
         <div class="buttons">
-          <a href="pag-projetos.html">
+   <!--- <a href="pag-projetos.html">
             <img
               src="https://cdn-icons-png.flaticon.com/512/2092/2092655.png"
               alt="Projetos"
               title="Projetos"
-            />
-            Projetos
+            /> 
+            Projetos --->
           </a>
           <a href="pag-contato.html">
             <img
