--- a/pag-contato.html
+++ b/pag-contato.html
@@ -190,7 +190,7 @@
       <!-- Redes sociais -->
       <div class="social-icons">
         <a
-          href="https://github.com/seu-usuario-github"
+          href="https://github.com/d4nieleugeni4"
           target="_blank"
           aria-label="GitHub"
         >
@@ -201,7 +201,7 @@
           />
         </a>
         <a
-          href="https://wa.me/seu-numero-whatsapp"
+          href="https://wa.me/5524981321901"
           target="_blank"
           aria-label="WhatsApp"
         >
@@ -212,7 +212,7 @@
           />
         </a>
         <a
-          href="https://www.instagram.com/seu-usuario-instagram"
+          href="https://www.instagram.com/dn_eugenia/"
           target="_blank"
           aria-label="Instagram"
         >
@@ -222,7 +222,7 @@
             title="Instagram"
           />
         </a>
-        <a href="mailto:seu-email@gmail.com" target="_blank" aria-label="Gmail">
+        <a href="mailto:danieldaniel0806mp@gmail.com" target="_blank" aria-label="Gmail">
           <img
             src="https://cdn-icons-png.flaticon.com/512/281/281769.png"
             alt="Gmail"
