--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         <!-- Redes sociais no mesmo quadrado -->
         <div class="social-icons">
           <a
-            href="https://www.instagram.com"
+            href="https://www.instagram.com/dn_eugenia/"
             target="_blank"
             aria-label="Instagram"
           >
@@ -240,7 +240,7 @@
               title="Instagram"
             />
           </a>
-          <a href="https://www.github.com" target="_blank" aria-label="GitHub">
+          <a href="https://github.com/d4nieleugeni4" target="_blank" aria-label="GitHub">
             <img
               src="https://cdn-icons-png.flaticon.com/512/2111/2111432.png"
               alt="GitHub"
@@ -259,7 +259,7 @@
             />
           </a>
           <a
-            href="https://t.me/seu_usuario_telegram"
+            href="https://t.me/@D4NIEL_EUGENIA"
             target="_blank"
             aria-label="Telegram"
           >
